Add tests and documentation for latex

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,6 @@ envlist = py27, py34
 changedir=doc
 commands=
   sphinx-build -b html . _build/html
+  sphinx-build -b latex . _build/latex
+  sh -c "(cd _build/latex && pdflatex -halt-on-error TikZSphinxExtension.tex)"
 deps=sphinx
