--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ tag_build = dev
 tag_date = true
 
 [aliases]
-release = egg_info -RDb ''
+release = egg_info -Db ''
 release_pypi = release sdist upload
