github(cicd): first action ever :boum:

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,11 +2,11 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+SPHINXOPTS    ?= -n -W -v
+SPHINXBUILD   ?= sphinx-build
 SPHINXPROJ    = TikZSphinxExtension
-SOURCEDIR     = .
-BUILDDIR      = _build
+SOURCEDIR     = source
+BUILDDIR      = build
 
 # Put it first so that "make" without argument is like "make help".
 help:
